# theory-autocoding

./: .gitignore  README.md  pyproject.toml
prompts/: 01-information_extraction.txt  01-related.md  02-open_coding.md  03-axial_coding.md  04-selective_coding.txt
scripts/: app.py
scripts/analyst/: axial-coding.py  open-coding.ipynb  open-coding.py  open-coding.txt  related.py
scripts/generate_input_texts/: axial_coding.py  describe.ipynb  open_coding.py  related.py
scripts/invoke/: axial_coding.py  open_coding.py  related.py
src/agent/: __init__.py  coding.py
